##-*- Mode: Change-Log; coding: utf-8; -*-
##
## Change log for perl distribution DTA::CAB

v1.106 2019-02-12  moocow
	* added Changes (this file: extracted from SVN logs & reformatted)
	* cleanup for CPAN release
	* SVNVERSION tweaks (revision only, no root URL)
	* find.hack: File::Find hacks for ExtUtils::Manifest
	* removed some (but not all) doubled and/or recursuive symlinks from SVN
	  - they don't play nicely with ExtUtils::Manifest / MakeMaker / File::Find

v1.105 2019-01-09  moocow
	* added ddc full lemma-list (LemmaListAll LemmasAll llist-all ll-all lla lemmas lemmata)

v1.104 2018-12-17  moocow
	* default -log-watch=USR1 for dta-cab-server.sh
	* added server logInitAnalyzer option
	* added -log-watch=SIGNAL syntax (reload log-config on user signal, e.g. -log-watch=USR1)

v1.103 2018-12-06  moocow
	* XmlLing : escape token text if not running in twcompat mode
	* syslog debugging
	* added cab-syslog.l4p -- getting weird rsyslog errors
	  > Oct 25 13:55:12 plato liblogging-stdlog: action 'action 0' resumed (module 'builtin:ompipe') [v8.24.0 try http://www.rsyslog.com/e/2359 ]
	  > Oct 25 13:55:51 plato liblogging-stdlog: action 'action 1' resumed (module 'builtin:ompipe') [v8.24.0 try http://www.rsyslog.com/e/2359 ]
	  ... on every message; not pretty
	* systemd-friendliness for cab sysv-scripts (control groups, etc)
	* dta-cab.sh: merged changes from bogus for in dstar/cabx/
	* added cgiwrap for version
	* web-howto typos
	* updated 'fliegen' example in web-howto
	* clean Version.pm
	* WebServiceHowto updates for XmlLing
	* alias tweaks
	* XmlLing for server mode
	* added support for TEI att.linguistic features
	  - new formatter Format::XmlLing (flat att.linguistic features, with optional TokWrap compatibility for later spliceback)
	  - new TEI and TEIws options 'att.linguistic=bool' : force use of XmlLing sub-formatter with appropriate options
	  - new TEI and TEIws aliases (ltei ... ling-tei-xml, lteiws ... ling-tei-ws)