@@ -3,6 +3,7 @@
 ## Change log for perl distribution DTA::CAB
 
 v1.106 2019-02-12  moocow
+	* improved Version.pm (re-)generation: only if this looks like a "proper" checkout
 	* added Changes (this file: extracted from SVN logs & reformatted)
 	* cleanup for CPAN release
 	* SVNVERSION tweaks (revision only, no root URL)
